# ChangeLog for sci-mathematics/gretl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.21 2009/11/21 08:30:53 bicatali Exp $

*gretl-1.8.5 (21 Nov 2009)

  21 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -files/gretl-1.7.9-nls.patch, -files/gretl-1.8.0-ldflags.patch,
  -gretl-1.8.1.ebuild, -gretl-1.8.2.ebuild,
  -files/gretl-1.8.2-ldflags.patch, +gretl-1.8.5.ebuild:
  Version bump

*gretl-1.8.4 (24 Sep 2009)

  24 Sep 2009; Sébastien Fabbro <bicatali@gentoo.org> +gretl-1.8.4.ebuild:
  Version bump

*gretl-1.8.2 (07 Aug 2009)

  07 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -files/gretl-1.7.6-ldflags.patch, -gretl-1.8.0.ebuild,
  files/gretl-1.8.0-ldflags.patch, +gretl-1.8.2.ebuild,
  +files/gretl-1.8.2-ldflags.patch:
  Version bump. More flags fixes

*gretl-1.8.1 (22 Jun 2009)

  22 Jun 2009; Sébastien Fabbro <bicatali@gentoo.org> -gretl-1.7.9.ebuild,
  +gretl-1.8.1.ebuild:
  Version bump

*gretl-1.8.0 (02 Feb 2009)

  02 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/gretl-1.8.0-ldflags.patch, -gretl-1.7.7.ebuild, gretl-1.7.9.ebuild,
  +gretl-1.8.0.ebuild:
  Version bump with fix to sandbox violation when sourceview is on, closing
  bug #252574

*gretl-1.7.9 (08 Oct 2008)

  08 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/gretl-1.7.9-nls.patch, -gretl-1.7.6.ebuild, +gretl-1.7.9.ebuild:
  Version bump

*gretl-1.7.7 (30 Aug 2008)

  30 Aug 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/gretl-1.6.5-cli.patch, -gretl-1.7.4.ebuild, -gretl-1.7.5.ebuild,
  +gretl-1.7.7.ebuild:
  Version bump

  19 Aug 2008; Markus Dittrich <markusle@gentoo.org>
  files/gretl-1.7.6-ldflags.patch:
  Fixed faulty patch causing compile failures (see bug #235108).

*gretl-1.7.6 (08 Aug 2008)

  08 Aug 2008; Markus Dittrich <markusle@gentoo.org> 
  +files/gretl-1.7.6-ldflags.patch, +gretl-1.7.6.ebuild: