@@ -3,16 +3,16 @@ Hash: SHA1
 
 AUX 50gretl-gentoo.el 473 RMD160 3b16bc41fe78a2e8b02a6d02624e74ae1f9c656e SHA1 c992256afbde18e06f5fc3c70ca7e0c7dafafc87 SHA256 7f5398d85016858044257a900e33d9441aa7a3981ac1d71feff79c26b03aa939
 AUX gretl-1.7.5-locale.patch 223 RMD160 2f20cfdf293e12d739797a0424f825dbc4534547 SHA1 36ca4b139f733672a6935406b6058003db9c03a5 SHA256 4633076ed483a595968cb495ef50f72f1a7c5a398acd8ebda907c89fef87d861
-DIST gretl-1.8.4.tar.bz2 6896500 RMD160 ba667d20954bca00fcc8c308d5c2e9441072b08a SHA1 2121983a7434b014049f9419179e84c3a17005c0 SHA256 9b007261f9091bebf314a61236e6ef83d88b6b27a17a2fbd4806349a2dd7cf70
 DIST gretl-1.8.5.tar.bz2 6965280 RMD160 1b7de7fe32d25a1713e90f3bab9288e4e3922e40 SHA1 ec12cfe735da24b552aa1a30920f1bc88033582d SHA256 d2dc50eb9d23715ffd421e15558263776347e3f848d0f065f4754c8fa9801017
-EBUILD gretl-1.8.4.ebuild 2735 RMD160 1e98f70dfb6594d35feeff4468c881db7fe66cff SHA1 49ba79e6449de227482685379bb70a0ce35a7d65 SHA256 8487263c38623bcaef163d90202439615b80ee7424a6ffedf305b1939ac61b22
+DIST gretl-1.8.6.tar.bz2 6982571 RMD160 a6eac7f543b60dca6db25618de7ef9093d9f449e SHA1 dc648e86f9f6be4a80faf8e3e89bd8bef0f6b9fa SHA256 bdfbce0c3a8b136a4a06e67da916d57f6155b1b9d4658db7595fe1fb3c6d89d2
 EBUILD gretl-1.8.5.ebuild 2735 RMD160 fbec890fb81670a7ab40e9336959a098c8356bc2 SHA1 69c5dea16fe4f8169ba586d4f3cba064de5e56be SHA256 cdab9951ffa350f29e704b60a52c748e024dedbe8b0203c66414a0a26a9043ea
-MISC ChangeLog 4090 RMD160 daf05c1f6a8c6acc0d8e8be1c417cd607eb58e3e SHA1 e4b1632a9b6abd91749e1df038168e4c20819eae SHA256 f255a97897f67d5d76c651a3bf8b8ea4b57aece8c7c66dca68e3b707bf20e05a
+EBUILD gretl-1.8.6.ebuild 2829 RMD160 eadfce3cfa3654f19440ce2d4a8ad230d3a16e3b SHA1 2947e23089a50bb6ce0f00486e8613b921a7910f SHA256 b1ff9c9642913324a0756e85d0535e3afd57d0fcbe58d5db2cbd15ce68586280
+MISC ChangeLog 4233 RMD160 a80c414a514cdbbe1af72184dcd22f0637ffe0bb SHA1 acff1169f7286e1290fe20514aa4dd7a3de87e08 SHA256 d803112c3c4d9bf3afb9515bc1b60a8a9e11726e807143254f70c0eaecb32671
 MISC metadata.xml 954 RMD160 907c798b9bfe3ca362a255261ba77633e680a940 SHA1 80a02212a2bfe2576d5a209172a730832ede96a2 SHA256 4f4ef8549a7e73d05ae7640a9d847eb96fb343fcf1b0ebd457aaffc2325f5014
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAksHr08ACgkQ1ycZbhPLE2DsuwCaA151VBEHEot5FbVRExNUvqV+
-W1YAn3kOGpeIN3ub6GxKy3XsNKM8uQZ2
-=lfhc
+iEYEARECAAYFAksmxnIACgkQ1ycZbhPLE2BtAwCdEsJXW6JkX/Ay68mmbIGJZpgD
+fA8An0Y2FQKyZl6UwJ3KCl1a56DXcD+C
+=Srmw
 -----END PGP SIGNATURE-----
