@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/gretl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.21 2009/11/21 08:30:53 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.22 2009/12/14 22:33:36 bicatali Exp $
+
+*gretl-1.8.6 (14 Dec 2009)
+
+  14 Dec 2009; Sébastien Fabbro <bicatali@gentoo.org> -gretl-1.8.4.ebuild,
+  +gretl-1.8.6.ebuild:
+  Version bump
 
 *gretl-1.8.5 (21 Nov 2009)
 
